# miracle

./: .gitignore  CHANGELOG  CHANGELOG.md  CMakeLists.txt  README.md  build.py  build.sh  main.c  run.py  run.sh  setup-workspace.bat  setup-workspace.sh  setup.py  todo
application/: config.ini  miracle.code-workspace
application/include/: libapi.h  libapi_dynamic.h
doc/: About.md  Application Example.md  Application Setup.md  Build System.md  Debugging.md  Example Application.md  Roadmap.md  VSC Extension.md
engine/: engine.c
engine/include/: libapi.h
engine/src/: engine.c
executable/include/: config.h  library.h
executable/include/platform/: platform.h
executable/src/: config.c  library.c  main.c  resource.rc
executable/src/platform/: linux.c  windows.c
include/: library.h
include/containers/: dynamic_array.h
include/platform/: platform.h
lib/core/include/containers/: stack.h
lib/core/include/core/: function.h
lib/core/src/containers/: dynamic_array.c  stack.c
lib/include/containers/: dynamic_array.h
lib/include/core/: function.h
lib/src/containers/: dynamic_array.c
scripts/: build.py  run.py  setup.py  valgrind_server.sh
scripts/templates/library-dynamic/src/: library_example.c
scripts/templates/library-static/src/: library_example.c
src/: library.c  main.c
src/containers/: dynamic_array.c
src/platform/: linux.c  windows.c
templates/application/: miracle.code-workspace
templates/application/include/: entry.h
templates/application/src/: entry.c
tools/wine/: setup-wine.sh
